tests/errors/compiler/coma_in_enum/coma_in_enum_1.c
enum { a, } tmp;

int main() {
	return 0;
}
